Tue Mar 31 15:25:07 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/ChangeLog-0.06_to_0.52: added archived Changelog.
	  [ruby-list:50105]
	* doc/ChangeLog-0.50_to_0.60: ditto.
	* doc/ChangeLog-0.60_to_1.1: ditto.

Mon Mar 30 22:02:55 2015  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* README.EXT.ja: add redirect [ruby-core:68631]

Mon Mar 30 14:42:41 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (fileattr_to_unixmode, winnt_lstat): deal with
	  symbolic link than directory, and set executable bits.

Mon Mar 30 11:27:54 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (copy_stream_body): use the arguments without conversion if
	  having read, readpartial, and write methods, than conversion by
	  to_path method.  [ruby-core:68676] [Bug #11015]

Sun Mar 29 21:08:37 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* gc.c (objspace_allrefs_destruct_i): fix a typo.
	  [Bug #11013]

Sun Mar 29 11:51:32 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (proc_binding): replicate env from method object, and
	  allocate the local variable area for the iseq local table.
	  [ruby-core:68673] [Bug #11012]

Sat Mar 28 09:19:41 2015  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/date/extconf.rb: try_cflags("-std=iso9899:1999") [Bug #10906]
	  ruby itself (including numeric.c) is built with strict compile
	  options including -std=iso9899:1999, but ext/date is not.
	  By the way -std=iso9899:1999 is not only a warning option but also
	  changes behavior like MACRO definitions for example INFINITY.
	  gcc on Solaris affect this.

Fri Mar 27 16:34:16 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk: revert using BOOTSTRAPRUBY for enc.mk, as
	  enc/depend uses CONFIG.  [ruby-core:68647] [Bug #11004]

Thu Mar 26 10:05:13 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/test_observer.rb: add tests for Observable module.
	  [fix GH-859] Patch by @brightbits

Thu Mar 26 06:35:10 2015  Eric Wong  <e@80x24.org>
